@@ -237,7 +237,7 @@ public class PiScriptRunner {
             final List<PiMatch> remoteMatches = match.getRemoteBuffer().matchTable.get(match.getRemoteIndex());
             return !((remoteMatches != null) && remoteMatches.contains(new PiMatch(match.getRemoteBuffer(),
                 match.getRemoteIndex(), localBuffer, match.getLocalIndex(), match.getLength())));
-          }).collect(Collectors.toList()).toString();
+          }).toList().toString();
 
           final String message = "Error in " + script + ":\nBuffer " + localBuffer + " has nonreciprocal matches:\n"
               + buffDefs + "\nPlease set matches only by using Buffer.matchWith() methods.";
@@ -269,7 +269,7 @@ public class PiScriptRunner {
         buffer.matchTable.values().forEach(flatten::addAll);
         flatten.stream().forEach(match -> {
           if (!result.getValue().contains(match.getRemoteBuffer())) {
-            PiScriptRunner.logger.log(Level.WARNING, "Error in " + script + ":\nMatch " + match
+            PiScriptRunner.logger.warning(() -> "Error in " + script + ":\nMatch " + match
                 + " links an input to another." + "\nPlease set matches only between inputs and outputs.");
           }
         });
@@ -280,7 +280,7 @@ public class PiScriptRunner {
         buffer.matchTable.values().forEach(flatten::addAll);
         flatten.stream().forEach(match -> {
           if (!result.getKey().contains(match.getRemoteBuffer())) {
-            PiScriptRunner.logger.log(Level.WARNING, "Error in " + script + ":\nMatch " + match
+            PiScriptRunner.logger.warning(() -> "Error in " + script + ":\nMatch " + match
                 + " links an output to another." + "\nPlease set matches only between inputs and outputs.");
           }
         });
@@ -289,7 +289,7 @@ public class PiScriptRunner {
 
     // Find ranges from input and output with multiple matches
     final List<Pair<PiBuffer, List<PiRange>>> multipleRanges = allBuffers.stream()
-        .map(b -> new Pair<>(b, b.getMultipleMatchRange())).collect(Collectors.toList());
+        .map(b -> new Pair<>(b, b.getMultipleMatchRange())).toList();
 
     // There can be no multiple match range in the output buffers !
     final boolean res3 = multipleRanges.stream()
@@ -582,7 +582,7 @@ public class PiScriptRunner {
     // always attached to real token by an overlapping
     // indivisible range !
     final List<PiBuffer> divisibleCandidates = allBuffers.stream()
-        .filter(buffer -> (buffer.matchTable.size() > 1) && buffer.isCompletelyMatched()).collect(Collectors.toList());
+        .filter(buffer -> (buffer.matchTable.size() > 1) && buffer.isCompletelyMatched()).toList();
 
     divisibleCandidates.stream().forEach(buffer -> {
       // All are divisible BUT it will not be possible to match divided
@@ -633,8 +633,8 @@ public class PiScriptRunner {
       final List<PiMatch> matches = new ArrayList<>(flatten);
 
       // Update the potential conflict list of all matches
-      matches.stream().forEach(match -> match.getReciprocate().getConflictCandidates().addAll(
-          matches.stream().filter(it -> it != match).map(PiMatch::getReciprocate).collect(Collectors.toList())));
+      matches.stream().forEach(match -> match.getReciprocate().getConflictCandidates()
+          .addAll(matches.stream().filter(it -> it != match).map(PiMatch::getReciprocate).toList()));
 
     }
 
@@ -659,9 +659,8 @@ public class PiScriptRunner {
     vertices.stream().forEach(it -> {
       final Pair<List<PiBuffer>, List<PiBuffer>> pair = this.scriptResults.get(it);
       // Buffer that were already merged are not processed
-      buffers.addAll(pair.getKey().stream().filter(buf -> buf.appliedMatches.size() == 0).collect(Collectors.toList()));
-      buffers
-          .addAll(pair.getValue().stream().filter(buf -> buf.appliedMatches.size() == 0).collect(Collectors.toList()));
+      buffers.addAll(pair.getKey().stream().filter(buf -> buf.appliedMatches.size() == 0).toList());
+      buffers.addAll(pair.getValue().stream().filter(buf -> buf.appliedMatches.size() == 0).toList());
     });
 
     // copy the buffer list for later use in MEG update
@@ -689,43 +688,22 @@ public class PiScriptRunner {
         return (nameRes != 0) ? nameRes : a.name.compareTo(b.name);
       });
 
-      final List<PiBuffer> matchedBuffers;
-      switch (step) {
+      final List<PiBuffer> matchedBuffers = switch (step) {
         // First step: Merge non-conflicting buffer with a unique match
-        case 0:
-          matchedBuffers = processGroupStep0(buffers);
-          break;
-        // Second step: Merge divisible buffers with multiple matchs
-        // and no conflict
-        case 1:
-          matchedBuffers = processGroupStep1(buffers);
-          break;
-        // Third step: Same as step 0, but test forward matches
-        // of buffers only
-        case 2:
-          matchedBuffers = processGroupStep2(buffers);
-          break;
-        // Fourth step: Like case 1 but considering forward only
-        // or backward only matches
-        case 3:
-          matchedBuffers = processGroupStep3(buffers);
-          break;
+        case 0 -> processGroupStep0(buffers);
+        // Second step: Merge divisible buffers with multiple matches and no conflict
+        case 1 -> processGroupStep1(buffers);
+        // Third step: Same as step 0, but test forward matches of buffers only
+        case 2 -> processGroupStep2(buffers);
+        // Fourth step: Like case 1 but considering forward only or backward only matches
+        case 3 -> processGroupStep3(buffers);
         // Fifth step: Mergeable buffers with a unique backward match that have conflict(s)
-        case 4:
-          matchedBuffers = processGroupStep4(buffers);
-          break;
-        case 5:
-          matchedBuffers = processGroupStep5(buffers);
-          break;
-        case 6:
-          matchedBuffers = processGroupStep6(buffers);
-          break;
-        case 7:
-          matchedBuffers = processGroupStep7(buffers);
-          break;
-        default:
-          throw new PreesmRuntimeException("Unsupported step number " + step);
-      }
+        case 4 -> processGroupStep4(buffers);
+        case 5 -> processGroupStep5(buffers);
+        case 6 -> processGroupStep6(buffers);
+        case 7 -> processGroupStep7(buffers);
+        default -> throw new PreesmRuntimeException("Unsupported step number " + step);
+      };
 
       if (!matchedBuffers.isEmpty()) {
         step = 0;
@@ -755,7 +733,7 @@ public class PiScriptRunner {
         final List<PiMatch> flatten = new ArrayList<>();
         buffer.matchTable.values().stream().forEach(flatten::addAll);
 
-        for (final PiMatch match : flatten.stream().filter(it -> !it.isApplied()).collect(Collectors.toList())) {
+        for (final PiMatch match : flatten.stream().filter(it -> !it.isApplied()).toList()) {
           if (!logged.contains(match.getReciprocate())) {
             this.log = this.log + match.getOriginalMatch().toString() + ", ";
             logged.add(match);
@@ -939,8 +917,7 @@ public class PiScriptRunner {
         final List<PiMatch> flatten = new ArrayList<>();
         candidate.matchTable.values().stream().forEach(flatten::addAll);
 
-        final List<
-            PiMatch> matches = flatten.stream().filter(it -> it.getType() == currentType).collect(Collectors.toList());
+        final List<PiMatch> matches = flatten.stream().filter(it -> it.getType() == currentType).toList();
 
         // Returns true if:
         // There is a unique forward match
@@ -1023,8 +1000,7 @@ public class PiScriptRunner {
         final List<PiMatch> flatten = new ArrayList<>();
         candidate.matchTable.values().stream().forEach(flatten::addAll);
 
-        final List<
-            PiMatch> matches = flatten.stream().filter(it -> it.getType() == currentType).collect(Collectors.toList());
+        final List<PiMatch> matches = flatten.stream().filter(it -> it.getType() == currentType).toList();
 
         // Returns true if:
         // Has a several matches
@@ -1184,8 +1160,7 @@ public class PiScriptRunner {
     for (final PiBuffer candidate : buffers) {
       final List<PiMatch> flatten = new ArrayList<>();
       candidate.matchTable.values().stream().forEach(flatten::addAll);
-      final List<PiMatch> matches = flatten.stream().filter(it -> it.getType() == MatchType.BACKWARD)
-          .collect(Collectors.toList());
+      final List<PiMatch> matches = flatten.stream().filter(it -> it.getType() == MatchType.BACKWARD).toList();
 
       // Returns true if:
       // Has a several matches
@@ -1239,7 +1214,7 @@ public class PiScriptRunner {
         this.log = this.log + flatten.stream().map(Object::toString).collect(Collectors.joining(", "));
       }
       PiScriptRunner.applyDivisionMatch(candidate,
-          flatten.stream().filter(it -> it.getType() == MatchType.BACKWARD).collect(Collectors.toList()));
+          flatten.stream().filter(it -> it.getType() == MatchType.BACKWARD).toList());
     }
     if (isGenerateLog() && !candidates.isEmpty()) {
       this.log = this.log + "\n";
@@ -1290,8 +1265,7 @@ public class PiScriptRunner {
 
         final List<PiMatch> flatten = new ArrayList<>();
         candidate.matchTable.values().stream().forEach(flatten::addAll);
-        final List<
-            PiMatch> matches = flatten.stream().filter(it -> it.getType() == currentType).collect(Collectors.toList());
+        final List<PiMatch> matches = flatten.stream().filter(it -> it.getType() == currentType).toList();
 
         // Returns true if:
         // There is a unique forward match
@@ -1383,8 +1357,7 @@ public class PiScriptRunner {
 
         final List<PiMatch> flatten = new ArrayList<>();
         candidate.matchTable.values().stream().forEach(flatten::addAll);
-        final List<
-            PiMatch> matches = flatten.stream().filter(it -> it.getType() == currentType).collect(Collectors.toList());
+        final List<PiMatch> matches = flatten.stream().filter(it -> it.getType() == currentType).toList();
 
         // Returns true if:
         // Has a several matches
@@ -1485,11 +1458,9 @@ public class PiScriptRunner {
     // Remove the matches from each other conflict candidates
     matches.stream().forEach(it -> {
       it.getConflictCandidates().removeAll(matches);
-      it.getReciprocate().getConflictCandidates()
-          .removeAll(matches.stream().map(PiMatch::getReciprocate).collect(Collectors.toList()));
+      it.getReciprocate().getConflictCandidates().removeAll(matches.stream().map(PiMatch::getReciprocate).toList());
       it.getConflictingMatches().removeAll(matches);
-      it.getReciprocate().getConflictingMatches()
-          .removeAll(matches.stream().map(PiMatch::getReciprocate).collect(Collectors.toList()));
+      it.getReciprocate().getConflictingMatches().removeAll(matches.stream().map(PiMatch::getReciprocate).toList());
     });
 
     // apply the matches of the buffer one by one
@@ -1538,10 +1509,8 @@ public class PiScriptRunner {
         // check if a successors/predecessor can be added to the group
         for (final AbstractActor dagVertex : newVertices) {
           final List<AbstractActor> candidates = new ArrayList<>();
-          final List<Fifo> inEdges = dagVertex.getDataInputPorts().stream().map(DataPort::getFifo)
-              .collect(Collectors.toList());
-          final List<Fifo> outEdges = dagVertex.getDataOutputPorts().stream().map(DataPort::getFifo)
-              .collect(Collectors.toList());
+          final List<Fifo> inEdges = dagVertex.getDataInputPorts().stream().map(DataPort::getFifo).toList();
+          final List<Fifo> outEdges = dagVertex.getDataOutputPorts().stream().map(DataPort::getFifo).toList();
 
           inEdges.stream().forEach(it -> candidates.add(it.getSourcePort().getContainingActor()));
           outEdges.stream().forEach(it -> candidates.add(it.getTargetPort().getContainingActor()));
@@ -1579,7 +1548,7 @@ public class PiScriptRunner {
 
                   // Find the 2 buffers corresponding to this sdfEdge
                   final List<PiBuffer> buffers = bufferCandidates.stream().filter(it -> it.getLoggingEdgeName() == fifo)
-                      .collect(Collectors.toList());
+                      .toList();
                   if (buffers.size() == 2) {
                     validBuffers = true;
 
@@ -1688,8 +1657,7 @@ public class PiScriptRunner {
 
     // Create the input/output lists
     // @farresti: I use toSet instead of toList as it retrieves the unique reference of the edge
-    final List<Fifo> incomingEdges = dagVertex.getDataInputPorts().stream().map(DataPort::getFifo)
-        .collect(Collectors.toList());
+    final List<Fifo> incomingEdges = dagVertex.getDataInputPorts().stream().map(DataPort::getFifo).toList();
 
     final List<PiBuffer> inputs = incomingEdges.stream().map(it -> {
       final String dataType = it.getType();
@@ -1711,8 +1679,7 @@ public class PiScriptRunner {
     }).collect(Collectors.toList());
 
     // outgoing edges
-    final List<Fifo> outgoingEdges = dagVertex.getDataOutputPorts().stream().map(DataPort::getFifo)
-        .collect(Collectors.toList());
+    final List<Fifo> outgoingEdges = dagVertex.getDataOutputPorts().stream().map(DataPort::getFifo).toList();
 
     final List<PiBuffer> outputs = outgoingEdges.stream().map(it -> {
       final String dataType = it.getType();
@@ -1978,12 +1945,12 @@ public class PiScriptRunner {
         return !correspondingBuffer.host;
       }
       return true;
-    }).collect(Collectors.toList()));
+    }).toList());
 
     // Remove all exclusions between unused buffers
     unusedMObjects.stream().forEach(mObj -> {
       final List<PiMemoryExclusionVertex> unusedNeighbors = meg.getAdjacentVertexOf(mObj).stream()
-          .filter(unusedMObjects::contains).collect(Collectors.toList());
+          .filter(unusedMObjects::contains).toList();
       unusedNeighbors.stream().forEach(it -> meg.removeEdge(mObj, it));
     });
   }
@@ -2005,8 +1972,7 @@ public class PiScriptRunner {
     allBuffers.stream().forEach(it -> it.simplifyMatches(processedMatch));
 
     // If a buffer has an empty matchTable, remove it from its list
-    final List<PiBuffer> unmatchedBuffer = allBuffers.stream().filter(it -> it.matchTable.isEmpty())
-        .collect(Collectors.toList());
+    final List<PiBuffer> unmatchedBuffer = allBuffers.stream().filter(it -> it.matchTable.isEmpty()).toList();
     inputs.removeAll(unmatchedBuffer);
     outputs.removeAll(unmatchedBuffer);
   }
